cryptsetup (2:1.0.1-17) unstable; urgency=low

  [ Jonas Meurer ]
  * merged ubuntu patches:
    - modify cryptdisks init script to use lsb functions
    - add luksformat and a manpage
  * removed postinst and postrm, empty scripts
  * added a README.Debian and a TODO
  * added a NEWS file for Debian, and explain the upstream transition
    from plain cryptsetup to cryptsetup-luks.

  [ Michael Gebetsroither ]
  * added "batch mode" patch (allready accepted by upstream)
  * converted crypttab.sgml to asciidoc
  * added dependencies for asciidoc to manpage conversion

 -- Michael Gebetsroither <michael.geb@gmx.at>  Fri,  3 Feb 2006 15:29:41 +0100

cryptsetup (2:1.0.1-16) unstable; urgency=low

  [ Jonas Meurer ]
  * already fixed in 2:1.0.1-14: binaries xor and delay from
    usbcrypto.mkinitrd don't exist in debian. replaces with a perl script
    and /bin/sleep. thanks to wesley terpstra for the help.
    (closes: #324353)
  * clean cryptdisks from bashisms (closes: #350360)
  * check for /usr/bin/timeout before using it in cryptdisks. First, it's
    only available when /usr is mounted, and that is not definitive when
    cryptdisks is run at boot time. Second, timeout is a non-essential
    debian package, and not neccecarily installed. The usage of
    /usr/bin/timeout in any case is only a temporary workaround.
  * move /usr/share/cryptsetup to /lib/cryptsetup, as the checks need to be
    available at boot time, before local filesystems (like i.e. /usr) are
    mounted.
  * replace RETRY=`expr $RETRY - 1` with RETRY=$(($RETRY-1)), as expr is in
    /usr/bin.
  * install init.d script and default file with dh_installinit
    (closes: #350548)
  * don't build-depend on cvs

 -- Jonas Meurer <mejo@debian.org>  Mon, 30 Jan 2006 17:54:50 +0100

cryptsetup (2:1.0.1-15) unstable; urgency=low

  [ Jonas Meurer ]
  * rebuilt with -sa, to include the sources into upload

 -- Jonas Meurer <mejo@debian.org>  Fri, 27 Jan 2006 18:18:46 +0100
