@@ -56,6 +56,8 @@ build-stamp: config.status patch-stamp
 	sed -i 's/<emphasis role="strong">/<emphasis role="bold">/g' debian/crypttab.5.xml
 	xsltproc -o debian/crypttab.5 /usr/share/xml/docbook/stylesheet/nwalsh/manpages/docbook.xsl \
 		debian/crypttab.5.xml
+	pod2man --section=8 --center="Administrative commands" --release="" debian/luksformat \
+		debian/luksformat.8
 	$(MAKE)
 	# cannot depend on libraries in /usr !
 	gcc lib/.libs/*.o src/*.o luks/.libs/*.o -o src/cryptsetup.static \
@@ -86,15 +88,9 @@ install: build
 	$(MAKE) DESTDIR=$(CURDIR)/debian/cryptsetup install
 	cp src/cryptsetup.static $(CURDIR)/debian/cryptsetup/sbin/cryptsetup
 
-	#install debian/cryptdisks $(CURDIR)/debian/cryptsetup/etc/init.d
-	#install -m 0644 debian/cryptdisks.default $(CURDIR)/debian/cryptsetup/etc/default/cryptdisks
-	install -m 0644 debian/cryptsetup.8 $(CURDIR)/debian/cryptsetup/usr/share/man/man8
-	install -m 0644 debian/crypttab.5 $(CURDIR)/debian/cryptsetup/usr/share/man/man5
-	install -m 0755 debian/luksformat $(CURDIR)/debian/cryptsetup/sbin/
-	pod2man --section=8 --center="Administrative commands" \
-		debian/luksformat --release="" > $(CURDIR)/debian/cryptsetup/usr/share/man/man8/luksformat.8
 	#install -m 0755 debian/prechecks/* $(CURDIR)/debian/cryptsetup/lib/cryptsetup/prechecks
 	install -m 0755 debian/postchecks/* $(CURDIR)/debian/cryptsetup/lib/cryptsetup/postchecks
+	install -m 0755 debian/luksformat $(CURDIR)/debian/cryptsetup/sbin/
 	install -m 0644 debian/cryptsetup.lintian-override \
 			$(CURDIR)/debian/cryptsetup/usr/share/lintian/overrides/cryptsetup
 	rmdir $(CURDIR)/debian/cryptsetup/usr/lib/cryptsetup
@@ -110,7 +106,7 @@ binary-arch: build install
 	dh_installexamples
 	dh_installinit --no-start --name=cryptdisks --update-rcd-params="start 28 S . stop 48 0 6 ."
 #	dh_install
-	dh_installman
+	dh_installman debian/cryptsetup.8 debian/crypttab.5 debian/luksformat.8
 	dh_link
 	dh_strip
 	dh_compress
